--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <title>Family Tree Creator</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="index_style.css">
     </head>
     <body>
-        <h1>Welcome to the Family Tree Creator!</h1>
+        <h1 id="title">Welcome to the Family Tree Creator!</h1>
     </body>
 </html>
