--- a/loginscreen.html
+++ b/loginscreen.html
@@ -10,15 +10,19 @@
         </script>
     </head>
     <body>
-      <h1 class="titleText">Family Tree Creator</h1>
         <div class="container">
+		<h1 class="titleText">Family Tree Creator</h1>
+		</div>
+		<br>
+		<div class="container">
+			<br>
             <form id="login" method="post" class="loginForm">
                 <label class="inputTitles">Username:</label>
                 <input type="text" placeholder="Username" id="username" class="inputText" name="username"/>
                 <br><br>
                 <label class="inputTitles">Password:</label>
                 <input type="password" placeholder="Password" id="pwd" class="inputText" name="pwd"/>
-                <br><br>
+                <br>
                 <input type="submit" class="loginBtn" value="Login" id="button"/>
                 <button class="registerBtn" onclick="register">Register</button>
             </form>
