--- a/regions_modal_included.html
+++ b/regions_modal_included.html
@@ -81,11 +81,10 @@
     //Function of the add button will refresh the page after updating database.
     //Tree Data and initialization function
       treeData = 
-      [{ name: "Father", "class": "man",    "textClass": "nodeText", marriages: 
-          [{"spouse": { "name": "Mother", "class": "woman",},"children": 
-              [{  "name": "Child", "class": "man",
-              }]
-          }]
+      [{ name: "Father",
+                "class": "man",
+                "textClass": "nodeText",
+                marriages: [{"spouse": { "name": "Mother", "class": "woman",}, "children": [{  "name": "Child", "class": "man",}]}]
       }]
 
       treeData.name = "new";
