--- a/regions_modal_included.html
+++ b/regions_modal_included.html
@@ -85,7 +85,7 @@
     {
         string name;
         string spouseName;
-        string children;
+        string children[];
         string fatherName;
         string motherName;
         string gender;
