--- a/regions_modal_included.html
+++ b/regions_modal_included.html
@@ -82,6 +82,12 @@
     //psuedocode for constructing tree
     //note that this code makes the assumption that children are only branched off from female
 
+    //needs sql functionality to...
+        //function which will return row information given a name
+        //function which will return row information given a spouse's name
+        //both need to be stored in structure like the one used below.
+
+
     struct nodeStruct
     {
         string name;
