--- a/regions_modal_included.html
+++ b/regions_modal_included.html
@@ -150,9 +150,9 @@
         //adds children to string. Recursively calls function on each child node.
         if (node.children != NULL && node.gender == "f")
         {
-            for (each child of rootNode)
+            for (each child of node)
             {
-                familyTreeString.append(child to root node);
+                familyTreeString.append(child info);
                 constructTree(child);
             }
         }
