--- a/regions_modal_included.html
+++ b/regions_modal_included.html
@@ -19,7 +19,7 @@
         <div class="center">
             <div class="treePanel">
 
-                <div id="graph"></div>                <!-- if we can get the footer stuck to bottom, no need for height-->
+                <div id="graph"></div>
             </div>
         </div>
 
